--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "clsx": "^2.1.0",
     "next": "^14.2.26",
     "react": "^18.2.0",
