Add memory-bank to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,18 @@ next-env.d.ts
 
 # Memory Bank
 memory-bank/
+
+# IDE and Editor Files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS Generated Files
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
